# QuandeLibC

./: .pre-commit-config.yaml  CMakeLists.txt  setup.py  techstack.md  techstack.yml
tests/: test_permanents.cpp
